[박현민] 04-11 21:27 view 수정본 업로드

--- a/approve-service/src/main/resources/templates/approve-service-detail.html
+++ b/approve-service/src/main/resources/templates/approve-service-detail.html
@@ -34,7 +34,7 @@
 		<div class="row">
 			<div class="col-md-6 mt-md-0 mt-3">
 				<label>대출 금액</label> <input type="readonly" class="form-control"
-					th:value="${#numbers.formatInteger(orderVO.orderPrice,3,'COMMA')}+'만원'"
+					th:value="${#numbers.formatInteger(orderVO.orderPrice,0,'COMMA')}+'만원'"
 					required readonly>
 			</div>
 			<div class="col-md-6 mt-md-0 mt-3">
@@ -62,7 +62,7 @@
 					th:value="${orderVO.amount}" required readonly>
 			</div> -->
 			<div class="col-md-6 mt-md-0 mt-3">
-				<label>월 납부액</label> <input class="form-control" value="500,000원"
+				<label>월 납부액</label> <input class="form-control" th:value="${#numbers.formatInteger(orderVO.amount,0,'COMMA')}+'만원'"
 					required readonly>
 			</div>
 		</div>
@@ -122,6 +122,8 @@
 					alert(error);
 				}
 			});
+		}else{
+			alert("승인 취소");
 		}
 	}
 	function reject() {
