[박현민] 04-12 11:42 로컬(cmd버전) 최신화 업로드

--- a/manage-service/src/main/resources/templates/manage-service-list.html
+++ b/manage-service/src/main/resources/templates/manage-service-list.html
@@ -157,59 +157,6 @@
 			
 		}
 	</script>
-	<script>
-		$(document).ready(
-				function() {
-					$(".board th input[type=checkbox]").on(
-							"click",
-							function() {
-								var checked = $(this).prop("checked");
-								$(this).closest("thead").siblings("tbody")
-										.find("td input[type=checkbox]").each(
-												function() {
-													$(this).prop("checked",
-															checked);
-												})
-							})
-
-					var order;
-					var input;
-					var datalist = new Array(); //datalist라는 변수명 list로 생성      
-					$("#change").click(
-							function() { //태그에서 id가 change인걸 클릭했을때 발생하는 함수
-								$('input:checked').each(
-										function() { //input 체크한거 foreach 돌리기
-											var data = {
-												orderNo : 0,
-												status : 0
-											}
-											data.orderNo = $(this).parent()
-													.parent().parent().find(
-															'.order').text(); //orderNo 번호 구하기               
-											data.status = $(this).val(); //status 값 구하기               
-											datalist.push(data); //datalist에 데이터 집어넣기
-										})
-								$.ajax({
-									type : "post",
-									url : "update",
-									dataType : "json",
-									data : {
-										data : JSON.stringify(datalist)
-									},
-									success : function(data) {
-										alert(data);
-										location.href = "/manage/list";
-									},
-									error : function(request, error) {
-										location.href = "/manage/list";
-									}
-								});
-							});
-				});
-	</script>
-	<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 </html>
