--- a/confirm-service/src/main/resources/templates/confirm-service-list.html
+++ b/confirm-service/src/main/resources/templates/confirm-service-list.html
@@ -29,59 +29,59 @@
 						<hr>
 					</div>
 					<!-- Grid column -->
-					<!-- Grid row -->
-					<!--Table-->
-					<table class="table table-striped">
-						<!--Table head-->
-						<thead>
-							<tr>
-								<th>#</th>
-								<th>상품명</th>
-								<th>금리</th>
-								<th>목적</th>
-								<th>주문금액</th>
-								<th>기간</th>
-								<th>월 납부액</th>
-								<th>신청날짜</th>
-								<th>만기날짜</th>
-								<th>주문상태</th>
-							</tr>
-						</thead>
-						<!--Table head-->
-						<!--Table body-->
-						<tbody>
-							<tr th:each="user : ${user}">
-								<th scope="row">1</th>
-							<tr th:each="list : ${myList}">
-								<th scope="row" th:text="${list.orderNo}"></th>
-								<td th:text="${list.proName}"></td>
-								<td th:text="${list.rate} + ' %'"></td>
-								<td th:text="${list.purpose}"></td>
-								<td th:text="${#numbers.formatInteger(list.orderPrice,0, 'COMMA')} +' 만원'"></td>
-								<td th:text="${list.period} + '개월'"></td>
-								<td th:text="${#numbers.formatInteger(list.amount, 0, 'COMMA')} + ' 원'"></td>
-								<td th:text="${#dates.format(list.orderDate, 'yyyy-MM-dd')}" ></td>
-								<td th:text="${#dates.format(list.endDate, 'yyyy-MM-dd')}"></td>								
-								<td>
-									<div th:switch="${list.status}">
-										<span th:case="0" th:text ="승인대기"></span>
-										<span th:case="1" th:text ="승인완료"></span>
-										<span th:case="2" th:text ="승인거절"></span>
-									</div>
-								</td>
-							</tr>
-						</tbody>
-						<!--Table body-->
-					</table>
-					<!--Table-->
 				</div>
 				<!-- Grid row -->
+				<!--Table-->
+				<table class="table table-striped table-bordered" style="--bs-table-striped-bg: none; width: 100%;" id="table_id" >
+					<!--Table head-->
+					<thead>
+						<tr>
+							<th>#</th>
+							<th>상품명</th>
+							<th>금리</th>
+							<th>목적</th>
+							<th>주문금액</th>
+							<th>기간</th>
+							<th>월 납부액</th>
+							<th>신청날짜</th>
+							<th>만기날짜</th>
+							<th>주문상태</th>
+						</tr>
+					</thead>
+					<!--Table head-->
+					<!--Table body-->
+					<tbody>
+						<tr th:each="user : ${user}">
+							<th scope="row">1</th>
+						<tr th:each="list : ${myList}">
+							<th scope="row" th:text="${list.orderNo}"></th>
+							<td th:text="${list.proName}"></td>
+							<td th:text="${list.rate} + ' %'"></td>
+							<td th:text="${list.purpose}"></td>
+							<td
+								th:text="${#numbers.formatInteger(list.orderPrice,0, 'COMMA')} +' 만원'"></td>
+							<td th:text="${list.period} + '개월'"></td>
+							<td
+								th:text="${#numbers.formatInteger(list.amount, 0, 'COMMA')} + ' 만원'"></td>
+							<td th:text="${#dates.format(list.orderDate, 'yyyy-MM-dd')}"></td>
+							<td th:text="${#dates.format(list.endDate, 'yyyy-MM-dd')}"></td>
+							<td>
+								<div th:switch="${list.status}">
+									<span th:case="0" th:text="승인대기"></span> <span th:case="1"
+										th:text="승인완료"></span> <span th:case="2" th:text="승인거절"></span>
+								</div>
+							</td>
+						</tr>
+					</tbody>
+					<!--Table body-->
+				</table>
 				<!--Table-->
 			</div>
 		</div>
 		<hr class="my-4">
 	</div>
 	<!--MDB Tables-->
+	<html th:replace="footer::footerFragment"></html>
 <script>
 	$(document).ready(function() {
 		$('#table_id').DataTable();
@@ -89,7 +89,7 @@
 </script>
 </main>
 <!-- 푸터 -->
-<footer id="sticky-footer"
+<!-- <footer id="sticky-footer"
 	class="footer flex-shrink-0 py-4 text-white-50"
 	style="background-color: #005B9F;">
 	<div class="container text-center">
@@ -98,7 +98,7 @@
 		<p class="text-light" style="margin-top: 1%; font-size: 25px;">권희수
 			김종백 박준호 박현민</p>
 	</div>
-</footer>
+</footer> -->
 <!-- 푸터 끝 -->
  <script
    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
