--- a/confirm-service/src/main/resources/templates/confirm-service-check.html
+++ b/confirm-service/src/main/resources/templates/confirm-service-check.html
@@ -14,7 +14,7 @@
 <body>
 	<script>
 		function main() {
-			location.replace("http://localhost:8000/main/menu");
+			location.href= "/main/menu";
 		}
 	</script>
 <body>
