--- a/main-service/src/main/resources/static/css/headerfooter.css
+++ b/main-service/src/main/resources/static/css/headerfooter.css
@@ -16,3 +16,12 @@ footer {
     padding: 15px 0;
     text-align: center;
 }
+
+.header-link{
+	text-decoration: none;
+	color: black;
+}
+
+.header-link:hover{	
+	color: #005B9F;
+}
