--- a/confirm-service/src/main/resources/templates/confirm-service-list.html
+++ b/confirm-service/src/main/resources/templates/confirm-service-list.html
@@ -67,8 +67,9 @@
 							<td th:text="${#dates.format(list.endDate, 'yyyy-MM-dd')}"></td>
 							<td>
 								<div th:switch="${list.status}">
-									<span th:case="0" th:text="승인대기"></span> <span th:case="1"
-										th:text="승인완료"></span> <span th:case="2" th:text="승인거절"></span>
+										<span style="font-weight:bolder; font-size:15px; color:black;" th:case="0" th:text ="승인대기"></span>
+										<span style="font-weight:bolder; font-size:15px; color:blue;" th:case="1" th:text ="승인완료"></span>
+										<span style="font-weight:bolder; font-size:15px; color:red;" th:case="2" th:text ="승인거절"></span>
 								</div>
 							</td>
 						</tr>
@@ -101,8 +102,6 @@
 </footer> -->
 <!-- 푸터 끝 -->
  <script
-   src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script
    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
