--- a/confirm-service/src/main/resources/templates/footer.html
+++ b/confirm-service/src/main/resources/templates/footer.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
 <link rel="stylesheet" href="css/boot_min.css" />
-<link rel="stylesheet" href="css/HeaderFooter.css" />
+<link rel="stylesheet" href="css/headerfooter.css" />
 </head>
 <body>
 	<!-- 푸터 -->
