--- a/main-service/src/main/resources/templates/Fragment/Calculater.html
+++ b/main-service/src/main/resources/templates/Fragment/Calculater.html
@@ -24,7 +24,7 @@
 			<br>
 			<p class="form-desc">대출금액의 상환금액과 일정을 계산하여 드립니다.</p>
 			<ul class="tbl-v">
-				<li class="tr-v">
+				<li class="tr-v" style="border-top: 1px solid #ddd;">
 					<div class="th-v">
 						<label for="calc01">대출금액</label>
 					</div>
@@ -102,17 +102,16 @@
 		</div>
 	</div>
 	<div class="btn-box al-c">
-		<span><button type="button" class="btn-style06 md" id="btnCalc"
-				onclick="cal()">계산하기</button></span>
+		<button type="button" class="btn-style06 md" id="btnCalc"
+				onclick="cal()">계산하기</button>
 	</div>
 	<div class="tab-basic-contents"
-		style="width: 1100px; display: flex; justify-content: center;">
-		<div style="margin-right: -84%">
-			<h5 class="calafter">계산결과</h5>
+		style="margin-top: 40px; width: 100%; height: 100px; display: flex; justify-content: center;">
+		<div style="margin-left: 10%">
+			<span class="calafter">계산결과</span>
 			<div id="tbl-wrap"></div>
 		</div>
 	</div>
-	<hr class="cal-form">
 </body>
 
 </html>
