--- a/main-service/src/main/resources/templates/Fragment/footer.html
+++ b/main-service/src/main/resources/templates/Fragment/footer.html
@@ -7,13 +7,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
 <link rel="stylesheet" href="css/boot_min.css" />
-<link rel="stylesheet" href="css/HeaderFooter.css" />
+<link rel="stylesheet" href="css/headerfooter.css" />
 </head>
 <body>
 	<!-- 푸터 -->
 	<footer id="sticky-footer"
 		class="footer flex-shrink-0 py-4 text-white-50"
-		style="background-color: #005B9F;">
+		style="margin-top: 65px; background-color: #005B9F;">
 		<div class="container text-center">
 			<p class="text-light" style="margin-top: 1%; font-size: 25px;">@2022
 				드림시큐리티 & 비트교육센터 Final Project!</p>
