--- a/main-service/src/main/resources/templates/Fragment/header2.html
+++ b/main-service/src/main/resources/templates/Fragment/header2.html
@@ -28,7 +28,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
 				<a href="http://localhost:8000/main/"> <img src="img/logo.png"></a>
 				<div class="container-fluid" style="height: 60px;">
-					<a class="navbar-brand" href="http://localhost:8000/main/"
+					<a class="navbar-brand" href="/main/"
 						style="color: black; font-size: 30px; font-weight: bold;">Dream
 						Security</a>
 					<button class="navbar-toggler" type="button"
@@ -47,7 +47,7 @@
 									class="d-none d-md-inline">시연</span></a> <span class="caret"></span>
 								<div class="dropdown-menu">
 									<a class="dropdown-item"
-										href="http://localhost:8000/actuator/health/circuitBreakers">CircuitBreaker</a>
+										href="/actuator/health/circuitBreakers">CircuitBreaker</a>
 									<div class="dropdown-divider"></div>
 									<a class="dropdown-item"
 										href="http://localhost:8761">Eureka</a>
@@ -63,7 +63,7 @@
 	<script>
 		//로그아웃 버튼
 		function login() {
-			location.href = "http://localhost:8000/main/menu";
+			location.href = "/main/menu";
 		}
 	</script>
 	<!-- 헤더 끝 -->
