--- a/product-service/src/main/resources/templates/product-service-list.html
+++ b/product-service/src/main/resources/templates/product-service-list.html
@@ -11,14 +11,11 @@
 <link rel="stylesheet" href="css/product-service-list.css">
 <link rel="stylesheet" href="css/button.css">
 <script	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.js"></script>
 </head>
 <script>
 	function move() {
-		location.replace("http://localhost:8000/product/register");
+		location.href="/product/register";
 	}
 </script>
 <body class="hm-gradient">
@@ -67,7 +64,7 @@
 								<td th:text="${product.proName}">Mark</td>
 								<td th:text="${product.need}"></td>
 								<td
-									th:text="${#numbers.formatInteger(product.proLimit, 3, 'COMMA')} + '만원'"></td>
+									th:text="${#numbers.formatInteger(product.proLimit, 0, 'COMMA')} + '만원'"></td>
 								<td th:text="${product.rate}+'%'"></td>
 								<td th:text="${product.term} + '개월'"></td>
 								<td th:text="${product.detail}"></td>
