--- a/main-service/src/main/resources/templates/Fragment/header.html
+++ b/main-service/src/main/resources/templates/Fragment/header.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Document</title>
 <link rel="stylesheet" href="css/boot_min.css" />
-
+<link rel="stylesheet" href="css/headerfooter.css" />
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
 	crossorigin="anonymous"></script>
@@ -42,7 +42,7 @@
 						style="font-size: 20px; margin-top: 0.5%">
 						<ul class="navbar-nav me-auto">
 							<li class="nav-item dropdown"><a
-								class="nav-link pl-0 dropdown-toggle" href="#"
+								class="header-link pl-0 dropdown-toggle" href="#"
 								data-toggle="dropdown" aria-haspopup="true"
 								aria-expanded="false"> <i class="far fa-heart"></i> <span
 									class="d-none d-md-inline">시연</span>
