--- a/product-service/src/main/resources/templates/product-service-list.html
+++ b/product-service/src/main/resources/templates/product-service-list.html
@@ -41,7 +41,7 @@
 						style="-bs-table-striped-bg: none;">
 						<!--Table head-->
 						<thead
-							style="background: #f4f4f4; color: #5d5b5b; font-weight: 100; font-size: 20px;">
+							style="background: rgb(255, 255, 255); color: black; font-weight: 100; font-size: 20px; vertical-align: middle;">
 							<tr>
 								<th>#</th>
 								<th style="width: 150px; text-align:center;">상품명</th>
