--- a/product-service/src/main/resources/templates/product-service-register.html
+++ b/product-service/src/main/resources/templates/product-service-register.html
@@ -26,13 +26,13 @@
 			<div class="row">
 				<div class="col-md-6 mt-md-0 mt-3">
 					<label>상품명</label> <input class="form-control" type="text"
-						id="proName" name="proName" required>
+						id="proName" name="proName" required/>
 				</div>
 				<div class="col-md-6 mt-md-0 mt-3">
 					<label>대출 한도(만원)</label> <input class="form-control" type="text"
 						id="proLimit" name="proLimit" onkeyup="inputNumberFormat(this)"
 						oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');"
-						required>
+						required/>
 				</div>
 
 			</div>
@@ -56,13 +56,13 @@
 				<div class="col-md-6 mt-md-0 mt-3">
 					<label>신청자격</label>
 					<textarea class="form-control" id="need" name="need" cols="15"
-						rows="3" style="resize: none;"></textarea>
+						rows="3" style="resize: none;" required></textarea>
 					<!-- <input class="form-control" required style="height: 200%;"> -->
 				</div>
 				<div class="col-md-6 mt-md-0 mt-3">
 					<label>상품설명</label>
 					<textarea class="form-control" id="detail" name="detail" cols="15"
-						rows="3" style="resize: none;"></textarea>
+						rows="3" style="resize: none;" required></textarea>
 					<!-- <input class="form-control" style="height: 200%;" required > -->
 				</div>
 			</div>
