--- a/main-service/src/main/resources/templates/Fragment/content.html
+++ b/main-service/src/main/resources/templates/Fragment/content.html
@@ -7,7 +7,7 @@
 <title>Content</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.css" rel="stylesheet">
-<scrip src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.5.8/swiper-bundle.min.js"></script>
 <link href="css/productList.css" rel="stylesheet">
 </head>
 <body>
