--- a/manage-service/src/main/resources/static/css/headerfooter.css
+++ b/manage-service/src/main/resources/static/css/headerfooter.css
@@ -26,3 +26,14 @@ footer {
 	color: #005B9F;
 	text-decoration:none !important
 }
+
+.dropdown-item:hover, .dropdown-item:focus {
+  color: #fff;
+  background-color: #005B9F !important;
+}
+
+.dropdown-item.active, .dropdown-item:active {
+  color: #fff;
+  text-decoration: none;
+  background-color: #497da5 !important;
+}
