--- a/order-service/src/main/resources/static/css/headerfooter.css
+++ b/order-service/src/main/resources/static/css/headerfooter.css
@@ -23,5 +23,17 @@ footer {
 }
 
 .header-link:hover{	
+	text-decoration: none;
 	color: #005B9F;
+}
+
+.dropdown-item:hover, .dropdown-item:focus {
+  color: #fff;
+  background-color: #005B9F !important;
+}
+
+.dropdown-item.active, .dropdown-item:active {
+  color: #fff;
+  text-decoration: none;
+  background-color: #497da5 !important;
 }
