--- a/product-service/src/main/resources/templates/header.html
+++ b/product-service/src/main/resources/templates/header.html
@@ -42,7 +42,7 @@
 						style="font-size: 20px; margin-top: 0.5%">
 						<ul class="navbar-nav me-auto">
 							<li class="nav-item dropdown"><a
-								class="nav-link pl-0 dropdown-toggle" href="#"
+								class="header-link pl-0 dropdown-toggle" href="#"
 								data-toggle="dropdown" aria-haspopup="true"
 								aria-expanded="false"> <i class="far fa-heart"></i> <span
 									class="d-none d-md-inline">시연</span>
